# Equity-derivatives-rs

./: Cargo.toml  README.md
src/: helpers.rs  lib.rs  mocking.rs
src/structs/: mod.rs  profits.rs  strategies.rs
